--- a/feature.html
+++ b/feature.html
@@ -125,7 +125,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                     <p class="fw-medium text-uppercase text-primary mb-2">Why Choosing Us!</p>
                     <h1 class="display-5 mb-4">Few Reasons Why People Choosing Us!</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit. Aliqu diam amet diam et eos. Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</p>
+                    <p class="mb-4"></p>
                     <div class="row gy-4">
                         <div class="col-12">
                             <div class="d-flex">
@@ -134,7 +134,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <h4>Experienced Workers</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</span>
+                                    <span>At G.M.Enterprises, our seasoned professionals bring decades of expertise to every project, ensuring unparalleled skill, efficiency, and quality. Partner with us for reliable results that consistently exceed expectations.</span>
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                                 </div>
                                 <div class="ms-4">
                                     <h4>Reliable Industrial Services</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</span>
+                                    <span>Choose us for Reliable Industrial Services and experience unmatched expertise, efficiency, and quality. Our seasoned team guarantees dependable results that exceed expectations, ensuring your project's success every time</span>
                                 </div>
                             </div>
                         </div>
@@ -155,8 +155,17 @@
                                     <i class="fa fa-check text-white"></i>
                                 </div>
                                 <div class="ms-4">
-                                    <h4>24/7 Customer Support</h4>
-                                    <span>Clita erat ipsum et lorem et sit, sed stet lorem sit clita duo justo magna dolore erat amet</span>
+                                    <h4>Industry Standard Customer Support</h4>
+                                    <span>Select us for unparalleled customer support. We prioritize your satisfaction with dedicated service, timely assistance, and personalized solutions, ensuring a seamless experience from start to finish</span>
+                                </div>
+                            </div>
+						<div class="d-flex">
+                                <div class="flex-shrink-0 btn-lg-square rounded-circle bg-primary">
+                                    <i class="fa fa-check text-white"></i>
+                                </div>
+                                <div class="ms-4">
+                                    <h4>Value for money</h4>
+                                    <span>Choose us for exceptional value for money. We offer competitive pricing without compromising on quality, delivering cost-effective solutions that maximize your investment and meet your needs effectively</span>
                                 </div>
                             </div>
                         </div>
