--- a/contact.html
+++ b/contact.html
@@ -167,7 +167,7 @@
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <p class="fw-medium text-uppercase text-primary mb-2">Contact Us</p>
                     <h1 class="display-5 mb-4">If You Have Any Queries, Please Feel Free To Contact Us</h1>
-                    <p class="mb-4"></a>.</p>
+                    <p class="mb-4"></a></p>
                     <div class="row g-4">
                         <div class="col-6">
                             <div class="d-flex">
