--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+91-9892691203</span>
+                    <span class="fs-5 fw-bold">+91-9619231477/9892691203</span>
                 </div>
             </div>
         </div>
@@ -75,15 +75,8 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="project.html" class="dropdown-item">Projects</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="index.html" class="dropdown-item">Blogs</a>
-                    </div>
-                </div>
-				<a href="contact.html" class="nav-item nav-link">Catalog</a>
+				<a href="feature.html" class="nav-item nav-link">Feature</a>
+				<a href="Content Catalog.pdf" class="nav-item nav-link">Catalog</a>
                 <a href="contact.html" class="nav-item nav-link active">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
@@ -118,7 +111,7 @@
                             <i class="fa fa-phone-alt fa-2x text-primary"></i>
                         </div>
                         <h4 class="mb-3">Phone Number</h4>
-                        <p class="mb-2">+91-9892691203</p>
+                        <p class="mb-2">+91-9619231477</p>
                         <p class="mb-4">+91-9892691203</p>
                         <a class="btn btn-primary px-4" href="tel:+0123456789">Call Now <i class="fa fa-arrow-right ms-2"></i></a>
                     </div>
@@ -142,8 +135,8 @@
                             <i class="fa fa-map-marker-alt fa-2x text-primary"></i>
                         </div>
                         <h4 class="mb-3">Office Address</h4>
-                        <p class="mb-2">Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
-                        <p class="mb-4">07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
+                        <p class="mb-2">Shop No 11, Blue Royal, Plot No 94, Sector 2, Ulwe, Navi Mumbai, Maharashtra, 410206</p>
+                        <p class="mb-4">07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Bycula West, Mumbai, 400011</p>
                         <a class="btn btn-primary px-4" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA" target="blank">Mumbai Office <i class="fa fa-arrow-right ms-2"></i></a>
 						
 						<a class="btn btn-primary px-4" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA" target="blank">Navi Mumbai Office <i class="fa fa-arrow-right ms-2"></i></a>
@@ -153,12 +146,12 @@
             <div class="row mb-5">
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                     <iframe class="w-100"
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d943.2275601956368!2d72.828991!3d18.9795711!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf0331319ab5%3A0xe400428c7c91ab17!2sG.M.ENGINEERS%20Fire%20Services!5e0!3m2!1sen!2sin!4v1720808250137!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin
 </iframe>
                 </div>
 				 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                     <iframe class="w-100"
-                    src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d943.2275601956368!2d72.828991!3d18.9795711!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7cf0331319ab5%3A0xe400428c7c91ab17!2sG.M.ENGINEERS%20Fire%20Services!5e0!3m2!1sen!2sin!4v1720808250137!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
 </iframe>
                 </div>
 				
@@ -239,10 +232,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Offices</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
-					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9892691203</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No 11, Blue Royal, Plot No 94, Sector 2, Ulwe, Navi Mumbai, Maharashtra, 410206</p>
+					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Byculla West, Mumbai, 400011</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9619231477/9892691203</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>gmfireenterprises@gmail.com</p>
+					<p class="mb-2"><i class="fa fa-envelope me-3"></i>gmengineerss@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -252,14 +246,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/BLeMeB9rRtwra5pR9">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="Content Catalog.pdf">Download Catalog</a>
-					<a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="contact.html">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Business Hours</h5>
