--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+91-9892691203/9867677141</span>
+                    <span class="fs-5 fw-bold">+91-9619231477/9892691203</span>
                 </div>
             </div>
         </div>
@@ -75,15 +75,8 @@
                 <a href="index.html" class="nav-item nav-link active">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link">Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="project.html" class="dropdown-item">Projects</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="index.html" class="dropdown-item">Blogs</a>
-                    </div>
-                </div>
-				<a href="contact.html" class="nav-item nav-link">Catalog</a>
+				<a href="feature.html" class="nav-item nav-link">Feature</a>
+				<a href="Content Catalog.pdf" class="nav-item nav-link">Catalog</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
@@ -207,7 +200,7 @@
             <div class="row g-5 align-items-center">
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="position-relative me-lg-4">
-                        <img class="img-fluid w-100" src="img/feature.jpg" alt="">
+                        <img class="img-fluid w-100" src="img/feature.jpeg" alt="">
                         <span class="position-absolute top-50 start-100 translate-middle bg-white rounded-circle d-none d-lg-block" style="width: 120px; height: 120px;"></span>
                         <button type="button" class="btn-play" data-bs-toggle="modal"
                             data-src="https://www.youtube.com/embed/GVBamXXVD30" data-bs-target="#videoModal">
@@ -309,11 +302,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Fire Extinguisher</h3>
+                                <h3 class="mb-0">Fire Hydrant System</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">New Supply & Refilling Services for All types of Fire Extinguisher. Availiable all capacity</p>
+                                <p class="text-white mb-0">Supply & Installation services for all types of Fire Hydrant System.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -328,13 +321,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Fire Hydrant System</h3>
+                                <h3 class="mb-0">Fire Alarm System</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">A fire hydrant system consists of strategically placed water outlets connected to municipal water mains, enabling quick access to large volumes of water for firefighting. 
-								Regular maintenance ensures these systems remain reliable for emergency use, 
-								crucial for fire safety in communities..</p>
+                                <p class="text-white mb-0">Supply & Installation services for all types of Fire Alarm System.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -349,11 +340,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Plumbing & Water Treatment</h3>
+                                <h3 class="mb-0">Fire Extinguisher</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">New Supply & Refilling Services for All types of Fire Extinguisher. Availiable all capacity.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -366,50 +357,7 @@
 
 
     <!-- Project Start -->
-    <div class="container-fluid bg-dark pt-5 my-5 px-0">
-        <div class="text-center mx-auto mt-5 wow fadeIn" data-wow-delay="0.1s" style="max-width: 600px;">
-            <p class="fw-medium text-uppercase text-primary mb-2">Our Projects</p>
-            <h1 class="display-5 text-white mb-5">See What We Have Completed Recently</h1>
-        </div>
-        <div class="owl-carousel project-carousel wow fadeIn" data-wow-delay="0.1s">
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-1.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Auto Engineering</h5>
-                </div>
-            </a>
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-2.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Civil Engineering</h5>
-                </div>
-            </a>
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-3.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Gas Engineering</h5>
-                </div>
-            </a>
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-4.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Power Engineering</h5>
-                </div>
-            </a>
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-5.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Energy Engineering</h5>
-                </div>
-            </a>
-            <a class="project-item" href="">
-                <img class="img-fluid" src="img/project-6.jpg" alt="">
-                <div class="project-title">
-                    <h5 class="text-primary mb-0">Water Engineering</h5>
-                </div>
-            </a>
-        </div>
-    </div>
+
     <!-- Project End -->
 
 
@@ -429,10 +377,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Offices</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
-					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9892691203</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No 11, Blue Royal, Plot No 94, Sector 2, Ulwe, Navi Mumbai, Maharashtra, 410206</p>
+					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Byculla West, Mumbai, 400011</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9619231477/9892691203</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>gmfireenterprises@gmail.com</p>
+					<p class="mb-2"><i class="fa fa-envelope me-3"></i>gmengineerss@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -442,14 +391,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/BLeMeB9rRtwra5pR9">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="Content Catalog.pdf">Download Catalog</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="contact.html">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Business Hours</h4>
