--- a/service.html
+++ b/service.html
@@ -54,7 +54,7 @@
             <div class="col-lg-6 text-end">
                 <div class="h-100 topbar-right d-inline-flex align-items-center text-white py-2 px-5">
                     <span class="fs-5 fw-bold me-2"><i class="fa fa-phone-alt me-2"></i>Call Us:</span>
-                    <span class="fs-5 fw-bold">+91-9892691203</span>
+                    <span class="fs-5 fw-bold">+91-9619231477/9892691203</span>
                 </div>
             </div>
         </div>
@@ -75,15 +75,8 @@
                 <a href="index.html" class="nav-item nav-link">Home</a>
                 <a href="about.html" class="nav-item nav-link">About</a>
                 <a href="service.html" class="nav-item nav-link active">Services</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Products</a>
-                    <div class="dropdown-menu bg-light m-0">
-                        <a href="project.html" class="dropdown-item">Projects</a>
-                        <a href="feature.html" class="dropdown-item">Features</a>
-                        <a href="index.html" class="dropdown-item">Blogs</a>
-                    </div>
-                </div>
-				<a href="contact.html" class="nav-item nav-link">Catalog</a>
+				<a href="feature.html" class="nav-item nav-link">Feature</a>
+				<a href="Content Catalog.pdf" class="nav-item nav-link">Catalog</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="" class="btn btn-primary px-3 d-none d-lg-block">Get A Quote</a>
@@ -125,11 +118,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Civil & Gas Engineering</h3>
+                                <h3 class="mb-0">Fire Hydrant System</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Supply & Installation services for all types of Fire Hydrant System.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -144,11 +137,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Power & Energy Engineering</h3>
+                                <h3 class="mb-0">Fire Alarm System</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Supply & Installation services for all types of Fire Alarm System.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -163,11 +156,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Plumbing & Water Treatment</h3>
+                                <h3 class="mb-0">Fire Extinguisher</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">New Supply & Refilling Services for All types of Fire Extinguisher. Availiable all capacity.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -182,11 +175,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Civil & Gas Engineering</h3>
+                                <h3 class="mb-0">CCTV Solution</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">Supply & Installation of All Types of CCTV Setup i.e DVR/NVR, IP Camera, Outdoor Camera, Indoor Camera, Etc.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -201,11 +194,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Power & Energy Engineering</h3>
+                                <h3 class="mb-0">Fire Hydrant & Fire Extinguisher Spare Parts</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">We manufacture all types of Fire Hydrant & Fire Extinguisher spare Parts.</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -220,11 +213,11 @@
                         <div class="service-detail">
                             <div class="service-title">
                                 <hr class="w-25">
-                                <h3 class="mb-0">Plumbing & Water Treatment</h3>
+                                <h3 class="mb-0">Industrial Safety Sign & Eqiupment</h3>
                                 <hr class="w-25">
                             </div>
                             <div class="service-text">
-                                <p class="text-white mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                                <p class="text-white mb-0">We supply all types of Industrial safety Eqiupment</p>
                             </div>
                         </div>
                         <a class="btn btn-light" href="">Read More</a>
@@ -237,55 +230,7 @@
 
 
     <!-- Testimonial Start -->
-    <div class="container-xxl py-5">
-        <div class="container">
-            <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                <p class="fw-medium text-uppercase text-primary mb-2">Testimonial</p>
-                <h1 class="display-5 mb-5">What Our Clients Say!</h1>
-            </div>
-            <div class="owl-carousel testimonial-carousel wow fadeInUp" data-wow-delay="0.1s">
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-1.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-2.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <div class="testimonial-img position-relative">
-                        <img class="img-fluid rounded-circle mx-auto mb-5" src="img/testimonial-3.jpg">
-                        <div class="btn-square bg-primary rounded-circle">
-                            <i class="fa fa-quote-left text-white"></i>
-                        </div>
-                    </div>
-                    <div class="testimonial-text text-center rounded p-4">
-                        <p>Clita clita tempor justo dolor ipsum amet kasd amet duo justo duo duo labore sed sed. Magna ut diam sit et amet stet eos sed clita erat magna elitr erat sit sit erat at rebum justo sea clita.</p>
-                        <h5 class="mb-1">Client Name</h5>
-                        <span class="fst-italic">Profession</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
     <!-- Testimonial End -->
         
 
@@ -295,10 +240,11 @@
             <div class="row g-5">
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Our Office</h5>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Sector 2, Ulwe,Navi Mumbai, Maharashtra, 410206</p>
-					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Mumbai, 400011</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9892691203</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>Shop No 11, Blue Royal, Plot No 94, Sector 2, Ulwe, Navi Mumbai, Maharashtra, 410206</p>
+					<p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>07/7A, Musa Killeder Marg, Ram Rahim Compound, Jacob Circle, Byculla West, Mumbai, 400011</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+91-9619231477/9892691203</p>
                     <p class="mb-2"><i class="fa fa-envelope me-3"></i>gmfireenterprises@gmail.com</p>
+					<p class="mb-2"><i class="fa fa-envelope me-3"></i>gmengineerss@gmail.com</p>
                     <div class="d-flex pt-3">
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-square btn-primary rounded-circle me-2" href=""><i class="fab fa-facebook-f"></i></a>
@@ -308,14 +254,14 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Quick Links</h5>
-                    <a class="btn btn-link" href="">About Us</a>
-                    <a class="btn btn-link" href="">Contact Us</a>
-                    <a class="btn btn-link" href="">Our Services</a>
+                    <a class="btn btn-link" href="about.html">About Us</a>
+                    <a class="btn btn-link" href="contact.html">Contact Us</a>
+                    <a class="btn btn-link" href="service.html">Our Services</a>
                     <a class="btn btn-link" href="">Terms & Condition</a>
-					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="https://maps.app.goo.gl/dJ6FhAAQwnUmDfKdA">Mumbai Office Google Map</a>
+					<a class="btn btn-link" href="https://maps.app.goo.gl/BLeMeB9rRtwra5pR9">Navi-Mumbai Office Google Map</a>
 					<a class="btn btn-link" href="Content Catalog.pdf">Download Catalog</a>
-                    <a class="btn btn-link" href="">Support</a>
+                    <a class="btn btn-link" href="contact.html">Support</a>
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h5 class="text-white mb-4">Business Hours</h5>
