--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,7 @@
             <div class="row mb-5">
                 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
                     <iframe class="w-100"
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1016.8961745075133!2d73.02587292849124!3d18.98301249888302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3be7c312409a276f%3A0x58f6acb299ff826c!2sG.M.ENTERPRISES!5e1!3m2!1sen!2sin!4v1721068301591!5m2!1sen!2sin	
 </iframe>
                 </div>
 				 <div class="col-12 wow fadeInUp" data-wow-delay="0.1s">
@@ -169,6 +169,7 @@
                                 </div>
                                 <div class="ms-3">
                                     <h6>Call Us</h6>
+									<span>+91-9619231477</span>
                                     <span>+91-9892619203</span>
                                 </div>
                             </div>
