--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
         <div class="container">
             <div class="text-center mx-auto pb-4 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 700px;">
                 <p class="fw-medium text-uppercase text-primary mb-2">Our Services</p>
-                <h1 class="display-5 mb-4">We Provide Best Fire Safety, Hydrant & CCTV Security Services</h1>
+                <h1 class="display-5 mb-4">We Provide Best Fire Safety, Fire Alarm, Hydrant System & CCTV Security Services</h1>
             </div>
             <div class="row gy-5 gx-4">
                 <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="0.1s">
