--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@
 
     <!-- Copyright Start -->
     <div class="container-fluid copyright bg-dark py-4">
+				<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+			<div class="elfsight-app-55315750-f115-4f64-af69-df928be9c37c" data-elfsight-app-lazy></div>
         <div class="container text-center">
             <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">G.M. Enterprises</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
