--- a/index.html
+++ b/index.html
@@ -428,6 +428,8 @@
         <div class="container text-center">
 					<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 			<div class="elfsight-app-55315750-f115-4f64-af69-df928be9c37c" data-elfsight-app-lazy></div>
+			 <a href='https://www.free-counters.org/'>Get free Counters</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=09b8e7f44cf15727d72c5815f20cf5f6f93c282c'></script>
+<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1204525/t/5"></script>
             <p class="mb-2">Copyright &copy; <a class="fw-semi-bold" href="#">G.M. Enterprises</a>, All Right Reserved.</p>
             <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
             <p class="mb-0">Designed By <a class="fw-semi-bold" href="https://gmfireenterprises.com/">Itransform Technology</a></p>
